# kazari

./: Cargo.toml  README.md
design/: ui_desgin_prototype.html
src/common/: Cargo.toml  id_table.rs  lib.rs
src/server/: Cargo.toml  client.rs  lib.rs  object.rs  server.rs
src/server/objects/: mod.rs  wl_buffer.rs  wl_surface.rs
